# Laboratory

./: .gitignore
.github/workflows/: build.yml
Laba1/: CMakeLists.txt  README.md
Laba1/Laba1/: .gitignore  IntersectionOperations.cpp  TwoDArray.cpp  TwoDArray.h  UnionOperations.cpp  main.cpp
Laba1/src/: TwoDArray.cpp  main.cpp
Laba2/: CMakeLists.txt  README.md
Laba2/Laba2/: Matrix.cpp  Matrix.h  main.cpp
Laba2/header/: Matrix.h
Laba2/src/: Matrix.cpp  main.cpp
Laba3/: CMakeLists.txt  MenuFunctions.cpp  MenuFunctions.h
Laba3/header/: CommissionMember.h  Human.h  MenuFunctions.h  TeacherCommissionMember.h  UniversityTeacher.h  commissionMember.hpp  linkedList.hpp  menu.hpp  person.hpp  string.hpp  teacher.hpp  teacherCommissionMember.hpp
Laba3/src/: CommissionMember.cpp  Human.cpp  MenuFunctions.cpp  TeacherCommissionMember.cpp  UniversityTeacher.cpp  linkedList.cpp  main.cpp  menu.cpp  person.cpp  string.cpp  teacher.cpp
Laba4/: CMakeLists.txt  Readme.md
Laba4/header/: Circle.hpp  Figure.hpp  Functions.hpp  Rectangle.hpp  Trapezoid.hpp
Laba4/src/: Circle.cpp  Functions.cpp  Rectangle.cpp  Trapezoid.cpp  main.cpp
Laba5/: CMakeLists.txt
Laba5/header/: LinkedList.hpp  Menu.hpp  Utilities.hpp
Laba5/src/: Menu.cpp  Utilities.cpp  main.cpp
Laba6/: Create CMakeLists.txt  MyException.cpp  main.cpp
Laba6/header/: MyException.hpp  MyString.hpp  menu.hpp
Laba6/src/: MyString.cpp  main.cpp  menu.cpp
Laba7/: CMakeLists.txt  employees.txt
Laba7/header/: Employee.hpp  FileManager.hpp  Menu.hpp  StringUtils.hpp
Laba7/src/: Employee.cpp  FileManager.cpp  Menu.cpp  StringUtils.cpp  main.cpp
Laba8/: CMakeLists.txt
Laba8/header/: Algorithms.hpp  Iterator.hpp  Node.hpp  SinglyLinkedList.hpp  menu.hpp
Laba8/src/: Algorithms.cpp  Iterator.cpp  Node.cpp  SinglyLinkedList.cpp  main.cpp  menu.cpp
